--- a/aruco.ipynb
+++ b/aruco.ipynb
@@ -170,40 +170,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xyz = []\n",
-    "rpy = []\n",
-    "v_x = []\n",
-    "v_y = []\n",
-    "v_z = []\n",
-    "\n",
-    "for frame in vid[:500:25]:  # 全部処理すると重いので…\n",
-    "    frame = frame[...,::-1]  # BGR2RGB\n",
-    "    frame = cv2.resize(frame, (360, 640))\n",
-    "    corners, ids, _ = cv2.aruco.detectMarkers(frame, aruco_dict)\n",
-    "\n",
-    "    rvec, tvec, _ = cv2.aruco.estimatePoseSingleMarkers(corners, marker_length, mtx, dist)\n",
-    "\n",
-    "    R_T = cv2.Rodrigues(rvec)[0].T  # 回転ベクトル -> 回転行列\n",
-    "    T = tvec[0].T\n",
-    "    xyz.append(np.dot(R_T, - T).squeeze())\n",
-    "\n",
-    "    r = np.arctan2(-R_T[2][1], R_T[2][2])\n",
-    "    p = np.arcsin(R_T[2][0])\n",
-    "    y = np.arctan2(-R_T[1][0], R_T[0][0])\n",
-    "    rpy.append(- np.array([r, p, y]))\n",
-    "\n",
-    "    v_x.append(np.dot(R_T, np.array([1,0,0])))\n",
-    "    v_y.append(np.dot(R_T, np.array([0,1,0])))\n",
-    "    v_z.append(np.dot(R_T, np.array([0,0,1])))\n",
-    "\n",
-    "    # ---- 描画\n",
-    "    cv2.aruco.drawDetectedMarkers(frame, corners, ids, (0,255,255))\n",
-    "    cv2.aruco.drawAxis(frame, mtx, dist, rvec, tvec, marker_length/2)\n",
-    "    cv2.imshow('frame', frame)\n",
-    "    cv2.waitKey(1)\n",
-    "    # ----\n",
-    "\n",
-    "cv2.destroyAllWindows()"
+    "def eulerAnglesToRotationMatrix(euler):\n",
+    "    R_x = np.array([[                1,                 0,                 0],\n",
+    "                    [                0,  np.cos(euler[0]), -np.sin(euler[0])],\n",
+    "                    [                0,  np.sin(euler[0]),  np.cos(euler[0])]])\n",
+    "    R_y = np.array([[ np.cos(euler[1]),                 0,  np.sin(euler[1])],\n",
+    "                    [ 0,                                1,                 0],\n",
+    "                    [-np.sin(euler[1]),                 0,  np.cos(euler[1])]])\n",
+    "    R_z = np.array([[ np.cos(euler[2]), -np.sin(euler[2]),                 0],\n",
+    "                    [ np.sin(euler[2]),  np.cos(euler[2]),                 0],\n",
+    "                    [                0,                 0,                 1]])\n",
+    "    R = np.dot(R_z, np.dot(R_y, R_x))\n",
+    "    return R"
    ]
   },
   {
@@ -212,23 +190,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "XYZ = []\n",
+    "RPY = []\n",
+    "V_x = []\n",
+    "V_y = []\n",
+    "V_z = []\n",
+    "\n",
+    "for frame in vid[:500:25]:  # 全部処理すると重いので…\n",
+    "    frame = frame[...,::-1]  # BGR2RGB\n",
+    "    frame = cv2.resize(frame, (360, 640))\n",
+    "    corners, ids, _ = cv2.aruco.detectMarkers(frame, aruco_dict)\n",
+    "\n",
+    "    rvec, tvec, _ = cv2.aruco.estimatePoseSingleMarkers(corners, marker_length, mtx, dist)\n",
+    "\n",
+    "    R = cv2.Rodrigues(rvec)[0]  # 回転ベクトル -> 回転行列\n",
+    "    R_T = R.T\n",
+    "    T = tvec[0].T\n",
+    "\n",
+    "    xyz = np.dot(R_T, - T).squeeze()\n",
+    "    XYZ.append(xyz)\n",
+    "\n",
+    "    rpy = np.deg2rad(cv2.RQDecomp3x3(R_T)[0])\n",
+    "    RPY.append(rpy)\n",
+    "    # print(rpy)\n",
+    "\n",
+    "    # rpy = cv2.decomposeProjectionMatrix(np.hstack([R_T, -T]))[6]  # [0~5]は使わない\n",
+    "    # rpy = np.deg2rad(rpy.squeeze())\n",
+    "    # print(rpy)\n",
+    "\n",
+    "    # r = np.arctan2(-R_T[2][1], R_T[2][2])\n",
+    "    # p = np.arcsin(R_T[2][0])\n",
+    "    # y = np.arctan2(-R_T[1][0], R_T[0][0])\n",
+    "    # rpy = - np.array([r, p, y])\n",
+    "    # print(rpy)\n",
+    "\n",
+    "    # from scipy.spatial.transform import Rotation\n",
+    "    # diff = eulerAnglesToRotationMatrix(rpy) - R_T\n",
+    "    # print(diff.astype(np.float16))\n",
+    "    # diff = Rotation.from_euler('xyz', rpy).as_matrix() - R_T\n",
+    "    # print(diff.astype(np.float16))\n",
+    "    \n",
+    "    V_x.append(np.dot(R_T, np.array([1,0,0])))\n",
+    "    V_y.append(np.dot(R_T, np.array([0,1,0])))\n",
+    "    V_z.append(np.dot(R_T, np.array([0,0,1])))\n",
+    "\n",
+    "    # ---- 描画\n",
+    "    # cv2.aruco.drawDetectedMarkers(frame, corners, ids, (0,255,255))\n",
+    "    # cv2.aruco.drawAxis(frame, mtx, dist, rvec, tvec, marker_length/2)\n",
+    "    # cv2.imshow('frame', frame)\n",
+    "    # cv2.waitKey(1)\n",
+    "    # ----\n",
+    "\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def plot_all_frames(elev=90, azim=270):\n",
     "    frames = []\n",
     "\n",
-    "    for t in tqdm(range(len(xyz))):\n",
+    "    for t in tqdm(range(len(XYZ))):\n",
     "        fig = plt.figure(figsize=(4,3))\n",
     "        ax = Axes3D(fig)\n",
     "        ax.view_init(elev=elev, azim=azim)\n",
     "        ax.set_xlim(-2, 2); ax.set_ylim(-2, 2); ax.set_zlim(-2, 2)\n",
     "        ax.set_xlabel(\"x\"); ax.set_ylabel(\"y\"); ax.set_zlabel(\"z\")\n",
     "\n",
-    "        x, y, z = xyz[t]\n",
-    "        ux, vx, wx = v_x[t]\n",
-    "        uy, vy, wy = v_y[t]\n",
-    "        uz, vz, wz = v_z[t]\n",
+    "        x, y, z = XYZ[t]\n",
+    "        ux, vx, wx = V_x[t]\n",
+    "        uy, vy, wy = V_y[t]\n",
+    "        uz, vz, wz = V_z[t]\n",
     "\n",
     "        # draw marker\n",
-    "        ax.scatter(0,0,0, color=\"k\")\n",
+    "        ax.scatter(0, 0, 0, color=\"k\")\n",
     "        ax.quiver(0, 0, 0, 1, 0, 0, length=1, color=\"r\")\n",
     "        ax.quiver(0, 0, 0, 0, 1, 0, length=1, color=\"g\")\n",
     "        ax.quiver(0, 0, 0, 0, 0, 1, length=1, color=\"b\")\n",
@@ -254,15 +292,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:02<00:00,  7.10it/s]\n",
-      "t:  29%|██▊       | 6/21 [00:00<00:00, 59.82it/s, now=None]"
+      "100%|██████████| 20/20 [00:02<00:00,  6.68it/s]\n",
+      "t:  33%|███▎      | 7/21 [00:00<00:00, 66.75it/s, now=None]"
      ]
     },
     {
@@ -288,7 +326,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,15 +338,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:03<00:00,  6.39it/s]\n",
-      "t:  33%|███▎      | 7/21 [00:00<00:00, 59.71it/s, now=None]"
+      "100%|██████████| 20/20 [00:03<00:00,  6.52it/s]\n",
+      "t:  38%|███▊      | 8/21 [00:00<00:00, 74.57it/s, now=None]"
      ]
     },
     {
@@ -334,7 +372,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -411,11 +449,11 @@
     }
    ],
    "source": [
-    "plt.title(\"xyz\"); plt.plot(xyz); plt.show()  # 青:x, 橙:y, 緑:z\n",
-    "plt.title(\"rpy\"); plt.plot(rpy); plt.show()  # 青:r, 橙:p, 緑:y\n",
-    "plt.title(\"(v_x)\"); plt.plot(v_x); plt.show()\n",
-    "plt.title(\"(v_y)\"); plt.plot(v_y); plt.show()\n",
-    "plt.title(\"(v_z)\"); plt.plot(v_z); plt.show()"
+    "plt.title(\"xyz\"); plt.plot(XYZ); plt.show()  # 青:x, 橙:y, 緑:z\n",
+    "plt.title(\"rpy\"); plt.plot(RPY); plt.show()  # 青:r, 橙:p, 緑:y\n",
+    "plt.title(\"(v_x)\"); plt.plot(V_x); plt.show()\n",
+    "plt.title(\"(v_y)\"); plt.plot(V_y); plt.show()\n",
+    "plt.title(\"(v_z)\"); plt.plot(V_z); plt.show()"
    ]
   },
   {
