--- a/aruco.ipynb
+++ b/aruco.ipynb
@@ -170,18 +170,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def eulerAnglesToRotationMatrix(euler):\n",
-    "    R_x = np.array([[                1,                 0,                 0],\n",
-    "                    [                0,  np.cos(euler[0]), -np.sin(euler[0])],\n",
-    "                    [                0,  np.sin(euler[0]),  np.cos(euler[0])]])\n",
-    "    R_y = np.array([[ np.cos(euler[1]),                 0,  np.sin(euler[1])],\n",
-    "                    [ 0,                                1,                 0],\n",
-    "                    [-np.sin(euler[1]),                 0,  np.cos(euler[1])]])\n",
-    "    R_z = np.array([[ np.cos(euler[2]), -np.sin(euler[2]),                 0],\n",
-    "                    [ np.sin(euler[2]),  np.cos(euler[2]),                 0],\n",
-    "                    [                0,                 0,                 1]])\n",
-    "    R = np.dot(R_z, np.dot(R_y, R_x))\n",
-    "    return R"
+    "# def eulerAnglesToRotationMatrix(euler):\n",
+    "#     R_x = np.array([[                1,                 0,                 0],\n",
+    "#                     [                0,  np.cos(euler[0]), -np.sin(euler[0])],\n",
+    "#                     [                0,  np.sin(euler[0]),  np.cos(euler[0])]])\n",
+    "#     R_y = np.array([[ np.cos(euler[1]),                 0,  np.sin(euler[1])],\n",
+    "#                     [ 0,                                1,                 0],\n",
+    "#                     [-np.sin(euler[1]),                 0,  np.cos(euler[1])]])\n",
+    "#     R_z = np.array([[ np.cos(euler[2]), -np.sin(euler[2]),                 0],\n",
+    "#                     [ np.sin(euler[2]),  np.cos(euler[2]),                 0],\n",
+    "#                     [                0,                 0,                 1]])\n",
+    "#     R = np.dot(R_z, np.dot(R_y, R_x))\n",
+    "#     return R"
    ]
   },
   {
