--- a/calib.ipynb
+++ b/calib.ipynb
@@ -42,6 +42,7 @@
    "metadata": {},
    "source": [
     "### キャリブレーション用画像の取得\n",
+    "- chess board: http://opencv.jp/sample/pics/chesspattern_7x10.pdf\n",
     "- いったん映像から3フレームおきに画像をcalib/に保存\n",
     "- その中からボケていないものを手作業でcalib_good/に入れた"
    ]
