add charuco pdf

--- a/3_charuco.ipynb
+++ b/3_charuco.ipynb
@@ -73,6 +73,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "2bf5e0db-5448-4257-ba69-78c99758f22b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save to pdf (A4)\n",
+    "import img2pdf  # pip install img2pdf\n",
+    "a4inpt = (img2pdf.mm_to_pt(210),img2pdf.mm_to_pt(297))\n",
+    "layout_fun = img2pdf.get_layout_fun(a4inpt)\n",
+    "with open(\"src/charuco.pdf\",\"wb\") as f:\n",
+    "\tf.write(img2pdf.convert('src/charuco.jpg', layout_fun=layout_fun))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "49c40f1b-c986-4ce2-8243-df57f2f80a5b",
    "metadata": {},
    "outputs": [
