--- a/6_remove_back.ipynb
+++ b/6_remove_back.ipynb
@@ -847,11 +847,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9a8afdc6-11ed-4047-ab2e-e7aae8b415c1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cfe0043788d74676bd3b53ae6908cc5c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/504 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "import cv2\n",
+    "import imageio\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "vid_paths = sorted(glob.glob('../data/tonpy-v11/data/video_large/*.gif'))\n",
+    "for i, path in enumerate(tqdm(vid_paths)):\n",
+    "    vid = imageio.mimread(path, memtest=False)\n",
+    "    vid = [cv2.resize(frame, (64,64)) for frame in vid]\n",
+    "    imageio.mimwrite(path.replace('video_large', 'video'), vid)"
+   ]
   },
   {
    "cell_type": "code",
